--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,38 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+li {
+  list-style-type: none;
+}
+
+.country-info {
+}
+
+.country-list__flag {
+  width: 100px;
+  margin-right: 15px;
+  margin-bottom: 20px;
+}
+
+.country-list__item {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.country-card__item {
+}
+
+.country-card__flag {
+  width: 200px;
+}
+
+.country-card__name {
+  margin-left: 40px;
+  font-size: 40px;
+  line-height: 1;
+}
+
+.country-card__detailes {
+  font-style: italic;
+}
